Change pom.xml to separate code with library, Remove springboot default unused endpoints